@@ -49,9 +49,16 @@ Avro 1.7.0 (unreleased)
     AVRO-1028. Python: Fix HTTP server to handle connection resets and
     redirects.  (Bo Shi via cutting)
 
-    AVRO-1095. C++ compiler warns about control reaching end of doAdavance (in JsonIO.cc) which returns something other than void. (thiru)
+    AVRO-1095. C++ compiler warns about control reaching end of
+    doAdavance (in JsonIO.cc) which returns something other than
+    void. (thiru)
 
     AVRO-1026. Add namespace support to C++. (Keh-Li Sheng via thiru)
+
+    AVRO-1097. Fix BinaryDecoder so that EOFException is thrown
+    instead of a generic IOException when reading ints and longs past
+    the end of file.  (thiru & cutting)
+
   BUG FIXES
 
     AVRO-1045. Java: Fix a bug in GenericData#deepCopy() of ByteBuffer values.
